classDiagram
    direction TB

    %% ── Enumerations ──────────────────────────────────────────────────────────

    class Priority {
        <<enumeration>>
        LOW
        MEDIUM
        HIGH
    }

    class Species {
        <<enumeration>>
        DOG
        CAT
        OTHER
    }

    class TaskStatus {
        <<enumeration>>
        PENDING
        COMPLETED
        SKIPPED
    }

    class Frequency {
        <<enumeration>>
        ONCE
        DAILY
        WEEKLY
    }

    %% ── Domain Classes ────────────────────────────────────────────────────────

    class Task {
        +str task_name
        +int duration_minutes
        +Priority priority
        +TaskStatus status
        +Frequency frequency
        +date due_date
        +get_priority() Priority
        +get_duration() int
        +mark_completed() Task
        +mark_skipped() None
        +reset() None
    }

    class Pet {
        +str pet_name
        +Species species
        +List~Task~ tasks
        +add_task(task) None
        +remove_task(task_name) None
        +get_tasks_by_priority(priority) List~Task~
        +get_all_tasks() List~Task~
        +get_pending_tasks() List~Task~
    }

    class Owner {
        +str owner_name
        +float available_hours_per_day
        +str preferences
        +List~Pet~ pets
        +add_pet(pet) None
        +remove_pet(pet_name) None
        +get_pets() List~Pet~
        +get_all_tasks_from_all_pets() List~Task~
        +get_pending_tasks_from_all_pets() List~Task~
        +get_tasks_by_status(status) List~Task~
        +get_tasks_by_pet(pet_name) List~Task~
    }

    %% ── Scheduling Classes ────────────────────────────────────────────────────

    class ScheduledTask {
        +Task task
        +str time_slot
        +str reasoning
        +get_task() Task
        +get_time_slot() str
        +get_reasoning() str
    }

    class DailyPlan {
        +List~ScheduledTask~ scheduled_tasks
        +float total_time_used
        +str description
        +get_schedule() List~ScheduledTask~
        +add_scheduled_task(scheduled_task) None
        +calculate_total_time() float
    }

    class Scheduler {
        +dict PRIORITY_WEIGHTS
        +generate_daily_plan(owner, pet, available_time) DailyPlan
        +sort_by_time(scheduled_tasks) List~ScheduledTask~
        +detect_conflicts(scheduled_tasks) List~str~
        -_sort_tasks_by_priority(tasks) List~Task~
        -_check_time_constraints(tasks, available_time) bool
        -_fit_tasks_to_time(tasks, available_time) List~Task~
        -_generate_reasoning(task) str
        -_generate_plan_description(pet, plan, available_time) str
        -_parse_time_slot(time_slot) tuple
    }

    %% ── Relationships ─────────────────────────────────────────────────────────

    Owner "1" *-- "0..*" Pet            : owns
    Pet   "1" *-- "0..*" Task           : has
    ScheduledTask "1" o-- "1" Task      : wraps
    DailyPlan     "1" *-- "0..*" ScheduledTask : contains

    Scheduler ..> DailyPlan     : creates
    Scheduler ..> Owner         : reads
    Scheduler ..> Pet           : reads
    Scheduler ..> ScheduledTask : inspects

    Task ..> Priority   : uses
    Task ..> TaskStatus : uses
    Task ..> Frequency  : uses
    Pet  ..> Species    : uses
